# benchmark_detection_active_markers

./: CMakeLists.txt  README.md  main.cpp
configs/camera/: gen4_camera.yaml
configs/markers/: default.yaml
include/: camera.hpp  detection_algorithm.hpp  event_reader.hpp  markers.hpp  runtime_manager.hpp
include/utils/: buffers.hpp  options.hpp  types.hpp  visualization.hpp
src/: camera.cpp  detection_algorithm.cpp  event_reader.cpp  markers.cpp  runtime_manager.cpp
src/utils/: buffers.cpp  options.cpp  visualization.cpp
